Fixed alignment of navbar

--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,6 @@ nav a:hover {
 nav ul {
     list-style-type: none;
     margin: 0;
-    margin-right: 1vw;
     padding: 0;
     display: flex;
 }
